minor edits to the ES table

--- a/Appendix G Table of effect sizes.html
+++ b/Appendix G Table of effect sizes.html
@@ -1634,7 +1634,7 @@ Active
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="Using a computer game to teach school-aged children about
 asthma 
  https://doi.org/10.1080/10494820.2015.1135469 Journal&#39;s H5 index:  38 
- Citations:  8">Greer, Lin &amp; Atkinson, 2016</span>
+ Citations:  8">Greer, Lin &amp; Atkinson, 2017</span>
 </td>
 <td style="text-align:right;">
 155
@@ -1678,7 +1678,7 @@ Active
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="Using a computer game to teach school-aged children about
 asthma 
  https://doi.org/10.1080/10494820.2015.1135469 Journal&#39;s H5 index:  38 
- Citations:  8">Greer, Lin &amp; Atkinson, 2016</span>
+ Citations:  8">Greer, Lin &amp; Atkinson, 2017</span>
 </td>
 <td style="text-align:right;">
 155
@@ -4619,8 +4619,8 @@ Active
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="Can Video Games Change Attitudes towards History? Results from a Laboratory Experiment Measuring Short- and Long-term Effects 
- unpublished Journal&#39;s H5 index:  NA 
- Citations:  0">Kolek et al., NA</span>
+ https://doi.org/10.1111/jcal.12575 Journal&#39;s H5 index:  NA 
+ Citations:  0">Kolek et al., 2021</span>
 </td>
 <td style="text-align:right;">
 145
@@ -4662,8 +4662,8 @@ Active
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="Can Video Games Change Attitudes towards History? Results from a Laboratory Experiment Measuring Short- and Long-term Effects 
- unpublished Journal&#39;s H5 index:  NA 
- Citations:  0">Kolek et al., NA</span>
+ https://doi.org/10.1111/jcal.12575 Journal&#39;s H5 index:  NA 
+ Citations:  0">Kolek et al., 2021</span>
 </td>
 <td style="text-align:right;">
 115
@@ -4705,8 +4705,8 @@ Active
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="Can Video Games Change Attitudes towards History? Results from a Laboratory Experiment Measuring Short- and Long-term Effects 
- unpublished Journal&#39;s H5 index:  NA 
- Citations:  0">Kolek et al., NA</span>
+ https://doi.org/10.1111/jcal.12575 Journal&#39;s H5 index:  NA 
+ Citations:  0">Kolek et al., 2021</span>
 </td>
 <td style="text-align:right;">
 145
@@ -4748,8 +4748,8 @@ Active
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="Can Video Games Change Attitudes towards History? Results from a Laboratory Experiment Measuring Short- and Long-term Effects 
- unpublished Journal&#39;s H5 index:  NA 
- Citations:  0">Kolek et al., NA</span>
+ https://doi.org/10.1111/jcal.12575 Journal&#39;s H5 index:  NA 
+ Citations:  0">Kolek et al., 2021</span>
 </td>
 <td style="text-align:right;">
 115
@@ -4791,8 +4791,8 @@ Active
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="Can Video Games Change Attitudes towards History? Results from a Laboratory Experiment Measuring Short- and Long-term Effects 
- unpublished Journal&#39;s H5 index:  NA 
- Citations:  0">Kolek et al., NA</span>
+ https://doi.org/10.1111/jcal.12575 Journal&#39;s H5 index:  NA 
+ Citations:  0">Kolek et al., 2021</span>
 </td>
 <td style="text-align:right;">
 145
@@ -4834,8 +4834,8 @@ Active
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="Can Video Games Change Attitudes towards History? Results from a Laboratory Experiment Measuring Short- and Long-term Effects 
- unpublished Journal&#39;s H5 index:  NA 
- Citations:  0">Kolek et al., NA</span>
+ https://doi.org/10.1111/jcal.12575 Journal&#39;s H5 index:  NA 
+ Citations:  0">Kolek et al., 2021</span>
 </td>
 <td style="text-align:right;">
 115
@@ -4905,7 +4905,7 @@ Implicit
 <td style="text-align:left;">
 </td>
 <td style="text-align:left;">
-violence
+Violence
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="0 days posttest delay">15</span>
@@ -4948,7 +4948,7 @@ Implicit
 <td style="text-align:left;">
 </td>
 <td style="text-align:left;">
-violence
+Violence
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="0 days posttest delay">15</span>
@@ -5318,7 +5318,7 @@ Active
 Promoting Bystander Intervention to Combat Sexual Violence on College
 Campuses 
  https://doi.org/10.1037/vio0000365 Journal&#39;s H5 index:  37 
- Citations:  0">Potter et al., 2020</span>
+ Citations:  0">Potter et al., 2021</span>
 </td>
 <td style="text-align:right;">
 146
@@ -5345,7 +5345,7 @@ Explicit
 Meaningful feedback
 </td>
 <td style="text-align:left;">
-bystander attitude - sexual violence
+Bystander attitude - sexual violence
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="0 days posttest delay">37.5</span>
@@ -5363,7 +5363,7 @@ Active
 Promoting Bystander Intervention to Combat Sexual Violence on College
 Campuses 
  https://doi.org/10.1037/vio0000365 Journal&#39;s H5 index:  37 
- Citations:  0">Potter et al., 2020</span>
+ Citations:  0">Potter et al., 2021</span>
 </td>
 <td style="text-align:right;">
 146
@@ -5390,7 +5390,7 @@ Explicit
 Meaningful feedback
 </td>
 <td style="text-align:left;">
-bystander attitude - sexual violence
+Bystander attitude - sexual violence
 </td>
 <td style="text-align:left;">
 <span style="     " data-toggle="tooltip" data-container="body" data-placement="right" title="28 days posttest delay">37.5</span>
